feat: knowledge center upgrade and performance optimization
- Add 4 advanced knowledge categories (AI, cybersecurity, algorithms, system-design)
- Add 21 high-quality knowledge items
- Fix N+1 queries in UserService, CommentService
- Fix memory leaks in ViewCountService and RateLimitInterceptor
- Add soft delete consistency to BlogService
- Optimize TextDiff with debounce and line limit
- Externalize sensitive config to environment variables